# pluto

./: .env.example  README.md  context.md
brain/: pyproject.toml
brain/src/: config.py  main.py
brain/src/agents/: chat_agent.py
brain/src/jobs/: memory_indexer.py
brain/src/models/: schemas.py
brain/src/services/: database.py  faiss_store.py  gateway_client.py  internal_client.py  memory_indexer.py  memory_search.py
brain/src/tools/: __init__.py  gmail_tools.py  memory_tools.py  profile_tools.py  web_search.py
db/: schema.sql  supabase-init.sql
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: BespokeMemoryModal.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  ProfileModal.tsx  Sidebar.tsx
frontend/src/components/login/: GoogleSignInButton.tsx  (+2 more)
frontend/src/hooks/: useSessionGuard.ts
frontend/src/lib/: api.ts  apiClient.ts  gatewayFetch.ts  session.ts
gateway/: package-lock.json  package.json
gateway/frontend/: package-lock.json  package.json
gateway/src/: config.ts  constants.ts  index.ts
gateway/src/jobs/: gmailInitialSync.ts  gmailJobs.ts
gateway/src/middleware/: internalAuth.ts  security.ts  session.ts  userContext.ts
gateway/src/models/: internal.ts
gateway/src/routes/: chat.ts  gmail.ts  graph.ts  memory.ts  profile.ts
gateway/src/services/: db.ts  gmailClient.ts  gmailOAuth.ts  userService.ts
gateway/src/utils/: crypto.ts  popupResponse.ts  request.ts
(+2 files in other folders)
